--- a/application/views/SignUp.html
+++ b/application/views/SignUp.html
@@ -9,5 +9,26 @@
 	<link rel="stylesheet" href="../../styles/signup.css">
 
 {% endblock %}
+{% block content %}
+	<form method="post" accept-charset="UTF-8">
+		{{ csrfInput() }}
+		<input type="hidden" name="action" value="users/send-password-reset-email">
+		{{ redirectInput("") }}
 
-{% block content %}{% endblock %}
+
+		<h3>
+			<label for="loginName">Username or email</label>
+		</h3>
+		<input id="loginName" type="text" name="loginName" value="{% if loginName is defined %}{{ loginName }}{% else %}{{ craft.app.user.rememberedUsername }}{% endif %}">
+
+		{% if errors is defined %}
+			<ul class="errors">
+				{% for error in errors %}
+					<li>{{ error }}</li>
+				{% endfor %}
+			</ul>
+		{% endif %}
+
+		<input type="submit" value="Submit">
+	</form>
+{% endblock %}
